[package]
name = "actix_error_handling_example"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.58"
serde_json = "1.0.114"
tokio =  { version = "1.36.0", features = ["full"] }
bcrypt = "0.15.1"
actix = "0.13.3"
actix-web = "4.5.1"
actix-xml = "0.2.0"
quick-xml = { version = "0.31.0", features = ["serialize"] }
serde = { version = "1.0.197", features = ["derive"] }